onjetivo do desafio foi criar uma visualização responsiva a uma largura especifica para a minha viewport utilizando media query

--- a/cards_responsivos.html
+++ b/cards_responsivos.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cards Responsivos</title>
 
     <link rel="stylesheet" href="cards_responsivos.css">
+    <link rel="stylesheet" href="cards_responsivos_media.css">
 </head>
+
 <body>
     <h1>Cards Responsivos</h1>
 
@@ -27,4 +30,5 @@
         </article>
     </section>
 </body>
+
 </html>
